# social-campaign

./: .env.example  .gitignore  README.md  app.py  generate_images.py  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
data/fonts/: README.md
data/input/briefs/: sample_brief_en.json  sample_brief_fr.json  sample_brief_ja.yaml
docs/: COMPLIANCE_GUIDE.md  FINAL_STATUS.md  FONT_FIX_COMPLETE.md  GUIDELINES_UPDATE.md  GUIDELINS_COMPARISON.MD  INTEGRATION_COMPLETE.md  QUICKSTART.md  UPDATE_SUMMARY.md
examples/: brand_guidelines.json  brand_guidelines_stadard,json  brand_guidelines_strict.json  sample_brief_de_with_generation.json  sample_brief_es.json
src/: __init__.py  config.py
src/compliance/: __init__.py  brand_checker.py  color_analyzer.py  content_validator.py
src/models/: __init__.py  campaign.py  compliance.py
src/services/: __init__.py  asset_manager.py  brief_parser.py  image_generator.py  image_processor.py  output_manager.py  pipeline.py  pipeline_enhanced.py  translator.py
src/ui/: campaign_results.py  compliance_page.py
src/utils/: __init__.py  font_finder.py  logger.py  validators.py
tests/: test_font_parameter.py  test_phase2.py  test_phase3.py  test_phase4.py  ultra_clear_test.py  verify_setup.py
tools/: project_structure.py
